# MKPFighting

./: Cargo.toml  README.md  run_ggrs_session_p1.bat  run_ggrs_session_p2.bat  todo.plan
assets/hitboxes/: character_1.json
assets/sprites/: MediumAttack.xcf
src/: main.rs
src/systems/: cloud_system.rs  collision_system.rs  curve_system.rs  health_system.rs  hitbox_debug_system.rs  input_system.rs  mod.rs  player_movement_system.rs  player_state_system.rs  restart_system.rs  round_timer_system.rs  screen_side_system.rs  startup_systems.rs
