[package]
name = "mkp_fighting"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggrs = { git = "https://github.com/gschup/ggrs", branch = "main"}
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", branch = "main"}
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main"}
structopt = { version = "0.3", default-features = false }